update application.yml datasource url to connect to postgres docker container database

--- a/twitterBackend/src/main/resources/application.yml
+++ b/twitterBackend/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: "Twitter Backend"
   datasource:
-    url:
+    url: jdbc:postgresql://localhost:5001/twitter
     username: postgres
     password: ${DB_PASSWORD}
   jpa:
