--- a/twitterBackend/src/main/resources/application.yml
+++ b/twitterBackend/src/main/resources/application.yml
@@ -11,9 +11,15 @@ spring:
     show-sql: true
   flyway:
     baseline-on-migrate: true
+  config:
+    frontend-domain: localhost
 
 server:
   port: 8080
+
+security:
+  jwt:
+    secret-key: ${JWT_KEY}
 
 logging:
   level:
