--- a/twitterBackend/compose.yaml
+++ b/twitterBackend/compose.yaml
@@ -10,7 +10,7 @@ services:
       POSTGRES_PASSWORD_FILE: /run/secrets/db_password
       POSTGRES_DB: twitter
     ports:
-      - 5001:5432
+      - "5001:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
     secrets:
@@ -26,7 +26,7 @@ services:
         SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/twitter
         SPRING_DATASOURCE_USERNAME: postgres
     ports:
-      - 8080:8080
+      - "8080:8080"
     develop:
       watch:
         - action: rebuild
@@ -36,11 +36,14 @@ services:
           path: ./pom.xml
     secrets:
       - db_password
+      - jwt_key
 
 ## Secrets
 secrets:
   db_password:
     file: secrets/db_password.txt
+  jwt_key:
+    file: secrets/jwt_key.txt
 
 ## Volumes
 volumes:
