--- a/twitterFrontend/package.json
+++ b/twitterFrontend/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.7",
     "@primeng/themes": "^19.0.6",
+    "date-fns": "^4.1.0",
     "express": "^4.18.2",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.6",
